kanc/src/tests/sample_code/should_fail/single_file/type_check/cannot_infer_todo_type/matchee.k
type Unit {
    c: Unit,
}

let foo = match todo {
    c => Unit.c,
};
